tests/parser/expr_parser/snapshots/r#mod__parser__expr_parser__op_parser__parse_parenthesis.snap
---
source: tests/parser/expr_parser/op_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 23,
        },
        kind: GlobalConst {
            name: "value",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 12,
                        end: 13,
                    },
                    kind: IntLiteral(
                        3,
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 14,
                        end: 15,
                    },
                    kind: Operator(
                        "*",
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 16,
                        end: 23,
                    },
                    kind: Parenthesized(
                        [
                            ExprToken {
                                range: Range {
                                    start: 17,
                                    end: 18,
                                },
                                kind: IntLiteral(
                                    2,
                                ),
                            },
                            ExprToken {
                                range: Range {
                                    start: 19,
                                    end: 20,
                                },
                                kind: Operator(
                                    "+",
                                ),
                            },
                            ExprToken {
                                range: Range {
                                    start: 21,
                                    end: 22,
                                },
                                kind: IntLiteral(
                                    5,
                                ),
                            },
                        ],
                    ),
                },
            ],
        },
    },
]
